# games

./: main.cpp  meson.build
bird/: .editorconfig  Makefile  meson.build
bird/include/: controller.hpp  game.hpp  player.hpp
bird/src/: controller.cpp  game.cpp  main.cpp  player.cpp
circles/: main.cpp
pacman-like/: README.md  main.cpp  meson.build
pong/: meson.build
pong/include/: controller.hpp  game.hpp
pong/src/: controller.cpp  game.cpp  main.cpp
